--- a/Amst/Asmt 1 - Presentation/Bootstrap.ipynb
+++ b/Amst/Asmt 1 - Presentation/Bootstrap.ipynb
@@ -15,8 +15,7 @@
     "from pandas_datareader import DataReader\n",
     "from datetime import datetime\n",
     "import scipy.stats as ss\n",
-    "import yfinance as yf\n",
-    "\n"
+    "import yfinance as yf"
    ]
   },
   {
