upd: update format

--- a/Amst/Asmt 1 - Presentation/Bootstrap.ipynb
+++ b/Amst/Asmt 1 - Presentation/Bootstrap.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -138,35 +138,35 @@
      "output_type": "stream",
      "text": [
       "NVDA\n",
-      "95% confidence interval of mu_boot: 30.09481744953071 33.401860291953795\n",
-      "95% confidence interval of std_boot of mu : 0.8140333524957944 0.9183951783670214\n",
-      "95% confidence interval of NVDA stock price std (method 1): 27.89178106534767 31.467601625839063\n",
-      "95% confidence interval of NVDA stock price std (method 2): 27.89178106534767 31.467601625839063\n",
+      "( 29.96 ,  33.38 )\n",
+      "( 0.81 ,  0.92 )\n",
+      "( 27.69 31.42 )\n",
+      "( 27.69 31.42 )\n",
       "AMD\n",
-      "95% confidence interval of mu_boot: 98.56550248843035 102.61072383991092\n",
-      "95% confidence interval of std_boot of mu : 0.9842459444801855 1.0685438602606177\n",
-      "95% confidence interval of AMD stock price std (method 1): 33.72389142745782 36.61224852487181\n",
-      "95% confidence interval of AMD stock price std (method 2): 33.72389142745782 36.61224852487181\n",
+      "( 98.52 ,  102.74 )\n",
+      "( 0.99 ,  1.07 )\n",
+      "( 33.77 36.62 )\n",
+      "( 33.77 36.62 )\n",
       "INTC\n",
-      "95% confidence interval of mu_boot: 40.8447811445142 41.929258713730356\n",
-      "95% confidence interval of std_boot of mu : 0.2799341427329497 0.296630389808271\n",
-      "95% confidence interval of INTC stock price std (method 1): 9.591574838898946 10.163649762622933\n",
-      "95% confidence interval of INTC stock price std (method 2): 9.591574838898946 10.163649762622933\n",
+      "( 40.85 ,  41.91 )\n",
+      "( 0.28 ,  0.3 )\n",
+      "( 9.6 10.16 )\n",
+      "( 9.6 10.16 )\n",
       "QCOM\n",
-      "95% confidence interval of mu_boot: 125.3342100075197 128.65579076438786\n",
-      "95% confidence interval of std_boot of mu : 0.8521665666011056 0.9322034990596695\n",
-      "95% confidence interval of QCOM stock price std (method 1): 29.198365440401098 31.940725554310333\n",
-      "95% confidence interval of QCOM stock price std (method 2): 29.198365440401098 31.940725554310333\n",
+      "( 125.23 ,  128.81 )\n",
+      "( 0.86 ,  0.93 )\n",
+      "( 29.3 32.01 )\n",
+      "( 29.3 32.01 )\n",
       "AAPL\n",
-      "95% confidence interval of mu_boot: 144.50949634116594 149.01625646886873\n",
-      "95% confidence interval of std_boot of mu : 1.0440461453132515 1.1354427963917386\n",
-      "95% confidence interval of AAPL stock price std (method 1): 35.77286657594022 38.90445249213314\n",
-      "95% confidence interval of AAPL stock price std (method 2): 35.77286657594022 38.90445249213314\n",
+      "( 144.56 ,  148.8 )\n",
+      "( 1.05 ,  1.13 )\n",
+      "( 35.93 38.86 )\n",
+      "( 35.93 38.86 )\n",
       "AVGO\n",
-      "95% confidence interval of mu_boot: 61.16643491351828 65.19410550574021\n",
-      "95% confidence interval of std_boot of mu : 1.0068331130104653 1.1128558461499947\n",
-      "95% confidence interval of AVGO stock price std (method 1): 34.497811018837126 38.130540380123115\n",
-      "95% confidence interval of AVGO stock price std (method 2): 34.49781101883713 38.130540380123115\n"
+      "( 60.85 ,  65.33 )\n",
+      "( 1.0 ,  1.11 )\n",
+      "( 34.32 37.96 )\n",
+      "( 34.32 37.96 )\n"
      ]
     }
    ],
@@ -196,10 +196,14 @@
     "     xboot_std = np.sort(x_boot_std)\n",
     "    \n",
     "     print(symbol)\n",
-    "     print(\"95% confidence interval of mu_boot:\", mu_boot[25], mu_boot[975])\n",
-    "     print(\"95% confidence interval of std_boot of mu :\", se_boot[25], se_boot[975])\n",
-    "     print(f\"95% confidence interval of {symbol} stock price std (method 1):\", se_boot[25]*np.sqrt(T), se_boot[975]*np.sqrt(T))\n",
-    "     print(f\"95% confidence interval of {symbol} stock price std (method 2):\", xboot_std[25], xboot_std[975])\n",
+    "     print(\"(\",round(mu_boot[25], 2),\",\", \n",
+    "          round(mu_boot[975], 2),\")\")\n",
+    "     print(\"(\",round(se_boot[25], 2),\",\",\n",
+    "          round(se_boot[975], 2),\")\")\n",
+    "     print(\"(\",round(se_boot[25]*np.sqrt(T), 2),\",\",\n",
+    "          round(se_boot[975]*np.sqrt(T), 2),\")\")\n",
+    "     print(\"(\",round(xboot_std[25], 2),\",\",\n",
+    "          round(xboot_std[975], 2),\")\")\n",
     "    "
    ]
   }
