--- a/Amst/Asmt 1 - Presentation/Mixture Modeling.ipynb
+++ b/Amst/Asmt 1 - Presentation/Mixture Modeling.ipynb
@@ -70,11 +70,11 @@
     "# Generate the data for r\n",
     "r = np.zeros(T)\n",
     "for t in range(T):\n",
-    "    eps1 = np.random.normal(0, 1, 1)\n",
-    "    eps2 = np.random.normal(0, 1, 1)\n",
+    "    eps1 = np.random.normal(0, 1)\n",
+    "    eps2 = np.random.normal(0, 1)\n",
     "    r1 = mu_1 + sigma1 * eps1 \n",
     "    r2 = mu_2 + sigma2 * eps2  \n",
-    "    u = np.random.uniform(0, 1, 1)\n",
+    "    u = np.random.uniform(0, 1)\n",
     "    r[t] = r1 * (u <= p) + r2 * (u > p)  \n",
     "\n",
     "# Plotting the histogram of r\n",
