--- a/Amst/Asmt 1 - Presentation/Merged_Analysis.ipynb
+++ b/Amst/Asmt 1 - Presentation/Merged_Analysis.ipynb
@@ -762,7 +762,7 @@
     }
    ],
    "source": [
-    "# output images are located in \"./resources/output.rar\"\n",
+    "# output images are located in \"./resources/output.7z\"\n",
     "pd.DataFrame(bestParam).drop(index=0).T"
    ]
   },
