--- a/Amst/Asmt 1 - Presentation/Merged_Analysis.ipynb
+++ b/Amst/Asmt 1 - Presentation/Merged_Analysis.ipynb
@@ -332,14 +332,10 @@
     "     xboot_std = np.sort(x_boot_std)\n",
     "    \n",
     "     print(symbol)\n",
-    "     print(\"(\",mu_boot[25],\",\", \n",
-    "          mu_boot[975],\")\")\n",
-    "     print(\"(\",se_boot[25],\",\",\n",
-    "          se_boot[975],\")\")\n",
-    "     print(\"(\",se_boot[25]*np.sqrt(T),\",\",\n",
-    "          se_boot[975]*np.sqrt(T),\")\")\n",
-    "     print(\"(\",xboot_std[25],\",\",\n",
-    "          xboot_std[975],\")\")"
+    "     print(\"(\",mu_boot[25],\",\", mu_boot[975],\")\")\n",
+    "     print(\"(\",se_boot[25],\",\", se_boot[975],\")\")\n",
+    "     print(\"(\",se_boot[25]*np.sqrt(T),\",\", se_boot[975]*np.sqrt(T),\")\")\n",
+    "     print(\"(\",xboot_std[25],\",\", xboot_std[975],\")\")"
    ]
   },
   {
