upd: feature data

--- a/Amst/Assignment 1/Merged_Analysis.ipynb
+++ b/Amst/Assignment 1/Merged_Analysis.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
     "# Data initialization\n",
     "start_date = datetime(2020, 1, 1)\n",
     "end_date = datetime(2024, 8, 31)\n",
-    "stock_symbols = ['NVDA', 'AMD', 'INTC', 'QCOM', 'AAPL', 'AVGO']\n",
+    "stock_symbols = ['NVDA', 'AMD', 'INTC', 'QCOM']\n",
     "stocks= yf.download(stock_symbols, start_date, end_date)['Adj Close']"
    ]
   },
