upd: feature preparation

--- a/Amst/Final Assignment/FeaturePreparation.ipynb
+++ b/Amst/Final Assignment/FeaturePreparation.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,13 @@
     "NVDA_stock_price_df.index = NVDA_stock_price_df.index.strftime('%y%m%d')\n",
     "# Display descriptive statistics for stock prices\n",
     "print(NVDA_stock_price_df.describe())\n",
-    "NVDA_stock_price_df.to_csv('NVDA_stock_price.csv')"
+    "print(NVDA_stock_price_df.head())\n",
+    "# NVDA_stock_price_df.to_csv('NVDA_stock_price.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -125,12 +126,13 @@
     "competitors_stock_price_df.index.name = 'Date'\n",
     "competitors_stock_price_df.index = competitors_stock_price_df.index.strftime('%y%m%d')\n",
     "print(competitors_stock_price_df.describe())\n",
-    "competitors_stock_price_df.to_csv('competitors_stock_price.csv')"
+    "print(competitors_stock_price_df.head())\n",
+    "# competitors_stock_price_df.to_csv('competitors_stock_price.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,20 +156,19 @@
    ],
    "source": [
     "# ADS Index Data\n",
-    "ADS = pd.read_excel('ADS_Index_Most_Current_Vintage.xlsx')\n",
+    "ADS = pd.read_excel('./data/ADS_Index_Most_Current_Vintage.xlsx')\n",
     "ADS['Date'] = pd.to_datetime(ADS['Date'], format='%Y:%m:%d')\n",
     "ADS = ADS[(ADS['Date'] >= pd.to_datetime(start_date)) & (ADS['Date'] <= pd.to_datetime(end_date))]\n",
     "ADS['Date'] = ADS['Date'].dt.strftime('%y%m%d')\n",
     "ADS = ADS[ADS['Date'].isin(NVDA_stock_price_df.index)]\n",
     "ADS.set_index('Date', inplace=True)\n",
-    "\n",
-    "# Display descriptive statistics for ADS Index\n",
-    "print(ADS.head(10))\n"
+    "print(ADS.describe())\n",
+    "print(ADS.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -191,32 +192,30 @@
    ],
    "source": [
     "# Fama French 5 Factors\n",
-    "FF5 = pd.read_csv('FF5.csv')\n",
+    "FF5 = pd.read_csv('./data/FF5.csv')\n",
     "FF5.rename(columns={'Unnamed: 0': 'Date'}, inplace=True)\n",
     "FF5['Date'] = pd.to_datetime(FF5['Date'], format='%Y%m%d')\n",
     "FF5 = FF5[(FF5['Date'] >= pd.to_datetime(start_date)) & (FF5['Date'] <= pd.to_datetime(end_date))]\n",
     "FF5['Date'] = FF5['Date'].dt.strftime('%y%m%d')\n",
     "FF5 = FF5[FF5['Date'].isin(NVDA_stock_price_df.index)]\n",
     "FF5.set_index('Date', inplace=True)\n",
-    "\n",
-    "# Display descriptive statistics for Fama French 5 Factors\n",
-    "print(FF5.head(10))\n",
-    "FF5.to_csv('filtered_FF5.csv')"
+    "print(FF5.describe())\n",
+    "print(FF5.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize Fred API\n",
+    "# Fred API\n",
     "fred = Fred(api_key='96b8dcff4c5efa52d89e588594f2930c')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -255,12 +254,13 @@
     "\n",
     "BTC_df = BTC_df[BTC_df.index.isin(NVDA_stock_price_df.index)]\n",
     "\n",
-    "print(BTC_df.describe())\n"
+    "print(BTC_df.describe())\n",
+    "print(BTC_df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -281,34 +281,25 @@
    ],
    "source": [
     "varList = [\n",
-    "    'SP500', 'NASDAQCOM', 'DJIA' # Stock Market Indexes\n",
+    "    'SP500', 'NASDAQCOM', 'DJIA' \n",
     "]\n",
     "\n",
     "fred_data = {}\n",
     "\n",
     "for var in varList:\n",
     "    try:\n",
-    "        # Fetch data from FRED API\n",
     "        series_data = fred.get_series(var, observation_start=start_date, observation_end=end_date)\n",
-    "        \n",
-    "        # Convert the series to DataFrame\n",
     "        fred_data[var] = series_data\n",
     "    except Exception as e:\n",
     "        print(f\"Error fetching data for {var}: {e}\")\n",
-    "\n",
-    "# Combine all series into a single DataFrame\n",
     "fred_df = pd.DataFrame(fred_data)\n",
     "fred_df.index.name = 'Date'\n",
-    "\n",
-    "# Format index to match the required date format: %y%m%d\n",
     "fred_df.index = pd.to_datetime(fred_df.index).strftime('%y%m%d')\n",
-    "\n",
-    "# Ensure dates align with a reference DataFrame (e.g., NVDA_stock_price_df)\n",
-    "reference_dates = NVDA_stock_price_df.index  # Replace with actual NVDA_stock_price_df when available\n",
+    "reference_dates = NVDA_stock_price_df.index  \n",
     "fred_df = fred_df[fred_df.index.isin(reference_dates)]\n",
     "\n",
-    "# Display descriptive statistics\n",
-    "print(fred_df.describe())\n"
+    "print(fred_df.describe())\n",
+    "print(fred_df.head())\n"
    ]
   },
   {
