--- a/Amst/Final Assignment/FeaturePreparation.ipynb
+++ b/Amst/Final Assignment/FeaturePreparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -64,10 +64,10 @@
       "max     135.568405\n",
       "Ticker       NVDA\n",
       "Date             \n",
-      "230901  48.490337\n",
+      "230901  48.490330\n",
       "230905  48.529320\n",
-      "230906  47.046764\n",
-      "230907  46.227013\n",
+      "230906  47.046768\n",
+      "230907  46.227016\n",
       "230908  45.558216\n"
      ]
     },
@@ -428,16 +428,176 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### macd"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_macd(data, close_col):\n",
+    "    data = data.copy()\n",
+    "\n",
+    "    # SMA20 & SMA50\n",
+    "    data['EMA12'] = data[close_col].ewm(span=12, adjust=False).mean()\n",
+    "    data['EMA26'] = data[close_col].ewm(span=26, adjust=False).mean()\n",
+    "\n",
+    "    # Calculate Z\n",
+    "    data['MACD'] = data['EMA12'] - data['EMA26']\n",
+    "    data['MACD_Signal'] = data['MACD'].ewm(span=9, adjust=False).mean()\n",
+    "    \n",
+    "    return data[['MACD','MACD_Signal']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_obv(data,close_col):\n",
+    "    # set OBV with zeros\n",
+    "    obv = [0]  \n",
+    "    \n",
+    "    for i in range(1, data.shape[0]):\n",
+    "        current_close = data.loc[i,close_col]\n",
+    "        previous_close = data.loc[i-1,close_col]        \n",
+    "        current_volume = data.loc[i,close_col]\n",
+    "        # If Current's close is higher than last day -> add today's vol\n",
+    "        if current_close > previous_close:\n",
+    "            obv.append(obv[-1] + current_volume)\n",
+    "        # If Current's close is lower than last day  -> min today's vol\n",
+    "        elif current_close < previous_close:\n",
+    "            obv.append(obv[-1] - current_volume)\n",
+    "        # If Current's close is equal to last day, -> keep \n",
+    "        else:\n",
+    "            obv.append(obv[-1])\n",
+    "    \n",
+    "    data['OBV'] = obv\n",
+    "    return data[['OBV']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### rsi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_rs(data, close_col, window):\n",
+    "    \"\"\"  𝑅𝑆 = 𝐴𝑣𝑒𝑟𝑎𝑔𝑒 𝑜𝑓 𝑥 𝑑𝑎𝑦𝑠′𝑢𝑝 𝑐𝑙𝑜𝑠𝑒𝑠/𝐴𝑣𝑒𝑟𝑎𝑔𝑒 𝑜𝑓 𝑥 𝑑𝑎𝑦𝑠′ 𝑑𝑜𝑤𝑛 𝑐𝑙𝑜𝑠𝑒𝑠 \"\"\"\n",
+    "    data = data.copy()\n",
+    "    \n",
+    "    # Calculate up closes & down closes\n",
+    "    up_closes = data[close_col].diff().apply(lambda x: x if x > 0 else 0)\n",
+    "    down_closes = data[close_col].diff().apply(lambda x: abs(x) if x < 0 else 0)\n",
+    "    \n",
+    "    # Calculate the moving average \n",
+    "    avg_up_closes = up_closes.rolling(window=window).mean()\n",
+    "    avg_up_down = down_closes.rolling(window=window).mean()\n",
+    "    \n",
+    "    return avg_up_closes/avg_up_down\n",
+    "\n",
+    "\n",
+    "def calculate_rsi(data, close_col, window):\n",
+    "    \"\"\" 𝑅𝑆𝐼 = 100 − 100/(1 + 𝑅𝑆) \"\"\"\n",
+    "    data = data.copy()\n",
+    "    \n",
+    "    rs = calculate_rs(data, close_col, window)\n",
+    "\n",
+    "    # Calculate RSI\n",
+    "    rsi = 100 - (100 / (1 + rs))\n",
+    "    \n",
+    "    # Add RSI to the DataFrame\n",
+    "    data['RSI'] = rsi    \n",
+    "    return data[['RSI']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_macd = get_macd(NVDA_stock_price.reset_index(),'NVDA')\n",
+    "df_obv = calculate_obv(NVDA_stock_price.reset_index(),'NVDA')\n",
+    "df_rsi = calculate_rsi(NVDA_stock_price.reset_index(), 'NVDA', window=21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_add_feature = pd.concat([NVDA_stock_price.reset_index()[['Date']],df_macd, df_obv,df_rsi,],axis=1).set_index('Date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_add_feature.index = df_add_feature.index.strftime('%y%m%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_add_feature.to_csv('addFeature.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## add feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_feature = pd.read_csv('featurePrepared.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat([df_feature, df_add_feature.reset_index(drop=True)],axis=1).to_csv('featurePrepared_updated.csv')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -451,9 +611,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
